Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62335

QSslCertificate::importPkcs12 crashes if PKCS12 file does not contain a private key

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.9.2
    • 5.9.1
    • Network: SSL
    • None
    • b9557296cb988c6007ed17f182a03c8205d5dffc

    Description

      If you try to open a PKCS12 file which does not contain a private key, QSslCertificate::importPkcs12 will crash. That function is not intended to open files which do not contain a private key, however a better behavior would be to return false in this case instead of crashing.

      See attached for a self-contained example including PKCS12 file.

      Attachments

        For Gerrit Dashboard: QTBUG-62335
        # Subject Branch Project Status CR V

        Activity

          People

            Eddy Edward Welbourne
            aalpert Alan Alpert
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes